[ISSUE #11125]Name adjustment.